Don't use Set.of() for column lists (#180)